[package]
name = "quantlib"
version = "0.1.0"
authors = ["ackleymi <ackleymi@gmail.com>"]
keywords = ["finance", "quantitative"]
description = "The quantitative finance libary for rust."
homepage = "https://github.com/piquette"
repository = "https://github.com/piquette"
documentation = "https://docs.rs/quantlib"
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
